Fix input size on mobile

--- a/_dev/src/assets/scss/layouts/_table.scss
+++ b/_dev/src/assets/scss/layouts/_table.scss
@@ -49,6 +49,14 @@
 //   }
 // }
 
+.ps_gs-table-controls {
+  &__go-to {
+    input {
+      width: rem(80) !important;
+    }
+  }
+}
+
 @include media-breakpoint-down(sm) {
   .ps_gs-table-controls {
     &::before {
@@ -73,6 +81,7 @@
     }
 
     &__go-to {
+      margin-top: rem(8) !important;
       order: 2;
       width: auto;
       margin-left: auto;
@@ -113,14 +122,11 @@
       order: 3;
       margin-left: auto;
       margin-right: auto;
-    }
-  }
-}
 
-.ps_gs-table-controls {
-  &__go-to {
-    input {
-      width: rem(80) !important;
+      input {
+        width: rem(60) !important;
+        margin-left: auto;
+      }
     }
   }
 }
